XP-2348 Image Editor - Broken layout * Fixed width of the image uploader

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/content/image-uploader.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/content/image-uploader.less
@@ -45,6 +45,10 @@
 
 }
 
+.image .image-uploader {
+  width: 100%;
+}
+
 @media screen and (max-height: 360px) {
   .upload-dialog {
     .dialog-content {
