--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/input-common.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/input-common.less
@@ -142,6 +142,10 @@
   }
   .input-type-view {
     margin: 0 0 0 @form-label-width;
+
+    .image-uploader {
+      width: 100%;
+    }
   }
 
   .bottom-button-row {
